# backup1c-python

./: .gitignore  README.md  main.py  pyproject.toml
backup1c/: __init__.py
backup1c/core/: exceptions.py
backup1c/gui/: __init__.py
backup1c/gui/components/: __init__.py
backup1c/gui/dialogs/: __init__.py
backup1c/gui/windows/: __init__.py
backup1c/modules/: crypto.py  logger.py  onec.py
